_includes/manuals/1.5/4.1.2_roles_and_permissions.md
A user's access to the features of Foreman are constrained by the **permissions** that they are granted. These permissions are also used to restrict the set of hosts, host groups and other resources that a user is able to access and modify.

Note: a user with global admin enabled is not restricted by the authorization system. This is the default for installations that do not have :login:true in _config/settings.yml_.

A logged in user will be granted the **Anonymous** role plus one or more additional roles. The permissions and filters associated with these roles are aggregated and determine the final permission set.

Roles may be administered by users with admin privileges or regular users with 'edit_roles' permission. In order to add new filters and permissions to a role, regular users must have the 'create_filters' permission.

#### Roles

These may be created, deleted and edited on the **Roles** page. Each role will contain permission filters, which define the actions allowed in a certain resource. Once your role is created, you can associate it with one or more users and user groups.

There are two builtin system roles


1. Anonymous: This is a set of permissions that every user at your installation will be granted, irrespective of any other roles that they have.


2. Default user: When a new Role is created this set of permissions are used as the template for the Role. The name is somewhat misleading but basically an ordinary default user who was assigned this Role would have these permissions set.



#### Filters

Filters are defined within the context of a role, clicking on the 'filters and permissions' link. A filter allows an user to choose a **resource** (Hosts, Host groups, etc...) and the **permissions** that should be granted for that resource. After a filter has been created, users given a role containing this filter will have the permissions for the resource specified at the filter.

If the filter is marked as 'Unlimited?', the permissions created in this filter will apply to all objects in the chosen resource. For instance, if the resource is Host, and the permissions are 'view' and 'index', and 'Unlimited?' is checked, users that have a role with this filter will be able to 'view' and 'index' all hosts in the system.

When 'Unlimited?' is unchecked, a text box allowing to define more granular filtering will be enabled. You can write a search query and permissions in this filter will be applied to the results of that query only. An example of a query for the resource Host could be 'os = RedHat'. In this case, the permissions in this filter will be applied only to Hosts whose Operating System is set to Red Hat. You can test your search queries at the index page of your resource, in this case that would be '/hosts'.

Some example queries for the resource Host:

1. Ownership and domain membership: 'owner_id = 95 and domain = localdomain' -  Will apply permisisons to hosts owned by User with id 95 and in the domain 'localdomain'


2. Compute resource membership: 'compute_resource = Openstack' - Will apply permissions to hosts deployed on compute resource Openstack.


3. Fact filtering: 'facts.alarmlevel = high' - Will apply permissions to hosts with a fact 'alarmlevel' with value 'high'. As a fact is only generated during a puppet run, this filter will only refer to machines that have been built and therefore cannot be used to restrict the creation of machines.


These pools of queries can be combined by adding them together or the filters can be used to restrict the selected resource to a smaller and smaller subset of the total. Think of them as set operations.

Note: If the "Administrator" check box is checked for a user, filtering will not take effect.

#### Permissions

These determine the operations that are allowed to be performed upon the resources to which they refer. For a few simple items like bookmarks, this operates as expected - it grants permission for all bookmarks. But for most resources, such as the hosts a user is able to operate on, there is an additional layer of security called filtering.

When editing a filter there is a search field at the bottom that narrows the scope of the permissions granted to a subset of the resource objects. Most permission types support this search field however there are some exceptions. The permission for creating objects can't be limited by a search query because the object does not exist during creation. Therefore a user is granted the create permission if they are associated with any filter containing this permission (limited by search or not).

Following table lists some of permissions and their impact:

<table class="table table-bordered table-condensed">
    <tbody><tr>
      <th>Permission</th>
      <th>Description</th>
    </tr>
    <tr>
      <td colspan="2"><strong><em>Permissions for Architectures, Authentication providers, environments, External variables, Common parameters, Medias, Models, Operating systems, Partition tables, Puppet classes and User groups</em></strong></td>
    </tr>
    <tr>
      <td>view</td>
      <td>The user is allowed to see this type of object when listing them on the index page</td>
    </tr>
    <tr>
      <td>create</td>
      <td>The user is allowed to create this type of object </td>
    </tr>
    <tr>
      <td>edit</td>
      <td>The user is allowed to edit this type of object</td>
    </tr>
    <tr>
      <td>destroy</td>
      <td>The user is allowed to destroy this type of object</td>
    </tr>
    <tr>
      <td colspan="2"><strong><em>Permissions for Domains</em></strong></td>
    </tr>
    <tr>
      <td>view</td>
      <td>The user is allowed to see a list of domains when viewing the index page</td>
    </tr>
    <tr>
      <td>create</td>
      <td>The user is allowed to create a new domain and will also be able to create domain parameters </td>
    </tr>
    <tr>
      <td>edit</td>
      <td>The user is allowed to edit a domain and will also be able to edit a domain's parameters. If they have domain filtering active in their profile then only these domains will be editable</td>
    </tr>
    <tr>
      <td>destroy</td>
      <td>The user is allowed to destroy a domain and will also be able to destroy domain parameters. If they have domain filtering active in their profile then only these domains will be deletable</td>
    </tr>
    <tr>
      <td colspan="2"><strong><em>Permissions for Host groups</em></strong></td>
    </tr>
    <tr>
      <td>view</td>
      <td>The user is allowed to see a list of host groups when viewing the index page</td>
    </tr>
    <tr>
      <td>create</td>
      <td>The user is allowed to create a new host group and will also be able to create host group parameters </td>
    </tr>
    <tr>
      <td>edit</td>
      <td>The user is allowed to edit a host group and will also be able to edit a host group's parameters. If they have host group filtering active in their profile then only these host groups will be editable</td>
    </tr>
    <tr>
      <td>destroy</td>
      <td>The user is allowed to destroy a host group and will also be able to destroy host group parameters. If they have host group filtering active in their profile then only these host groups will be deletable</td>
    </tr>
    <tr>
      <td colspan="2"><strong><em>Permissions for Hosts</em></strong></td>
    </tr>
    <tr>
      <td>view</td>
      <td>The user is allowed to see a list of hosts when viewing the index page. This list may be constrained by the user's host filters</td>
    </tr>
    <tr>
      <td>create</td>
      <td>The user is allowed to create a new host. This operation may be constrained by the user's host filters </td>
    </tr>
    <tr>
      <td>edit</td>
      <td>The user is allowed to edit a host. This operation may be constrained by the user's host filters</td>
    </tr>
    <tr>
      <td>destroy</td>
      <td>The user is allowed to destroy a host. This operation may be constrained by the user's host filters</td>
    </tr>
    <tr>
      <td colspan="2"><strong><em>Permissions for Users</em></strong></td>
    </tr>
    <tr>
      <td>view</td>
      <td>The user is allowed to see a list of users when viewing the index page. A user will always be able to see their own account even if they do not have this permission</td>
    </tr>
    <tr>
      <td>create</td>
      <td>The user is allowed to create a new user </td>
    </tr>
    <tr>
      <td>edit</td>
      <td>The user is allowed to edit existing users. A user will always be able to edit their own basic account settings and password</td>
    </tr>
    <tr>
      <td>destroy</td>
      <td>The user is allowed to delete users from the system</td>
    </tr>
  </tbody></table>
